@@ -52,7 +52,7 @@ ScreenCaution::ScreenCaution()
 	m_FadeWipe.SetOpened();
 	this->AddSubActor( &m_FadeWipe );
 
-	this->SendScreenMessage( SM_StartClosing, 1 );
+	this->SendScreenMessage( SM_StartClosing, 3 );
 }
 
 
