@@ -1067,7 +1067,7 @@ void SaveChanges()
 	switch( GAMESTATE->m_PlayMode )
 	{
 	case PLAY_MODE_ARCADE:
-		GAMESTATE->m_pCurSong->SaveToSMFile();
+		GAMESTATE->m_pCurSong->SaveToSongFile();
 		break;
 	case PLAY_MODE_ONI:
 	case PLAY_MODE_ENDLESS:
@@ -1075,7 +1075,7 @@ void SaveChanges()
 			for( int i=0; i<GAMESTATE->m_pCurCourse->m_iStages; i++ )
 			{
 				Song* pSong = GAMESTATE->m_pCurCourse->m_apSongs[i];
-				pSong->SaveToSMFile();
+				pSong->SaveToSongFile();
 			}
 		}
 		break;
